# EzAudioMeta

./: .gitignore  .travis.yml  LICENSE  README.md  main.py  requirements.txt  setup.cfg
audio/: base_audio.py
ezaudiometa/: main.py
ezaudiometa/modules/: base_audio.py
src/EzAudioMeta/: consts.py  main.py
src/EzAudioMeta/utilities/: custom_exceptions.py  optional_string_matchers.py
src/tests/: constants.py  context.py  test_base_audio.py  test_cli.py  test_optional_string_matchers.py
tests/: test_base_audio.py  test_cli.py  test_optional_string_matchers.py
utilities/: optional_string_matchers.py
