[metadata]
name = EzAudioMeta
version = 0.1.5
author = David del Real
autor_email = warhead_1090@hotmail.com
description = Easy CLI audio metadata manipulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XrossFox/EzAudioMeta
license = MIT
keywords = Audio Metadata CLI
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Topic :: Multimedia

[options]
package_dir=
    =src
packages=find:
install_requires =
    click>=7.1.2
    music-tag>=0.4.2
    mutagen>=1.45.1
[options.packages.find]
    where=src
    exclude=
        tests
[options.entry_points]
console_scripts =
    ezaudio = EzAudioMeta.main:cli

